Subindo configurações de url da api

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -10,7 +10,7 @@
 			ngf-select ng-model="vm.cad.imageFile">			
 			<input type="text" placeholder="Digite sua busca">
 			<input type="button" value="Buscar" ng-model="vm.buscar">			
-			<input type="submit" value="Enviar" ng-click="vm.register(vm.cad)">
+			<input type="submit" value="Enviar" ng-click="vm.setProducts(vm.cad)">
 		</form>	
 		<table class="table">
 			<tr>
