Habilitando uso de locationProvider e RouteParams

--- a/templates/home/alertHome.html
+++ b/templates/home/alertHome.html
@@ -4,6 +4,6 @@
 	If you need register a new product, click in button lower.
     </p>
     <p>
-      <a class="btn btn-lg btn-primary" href="#!/register" role="button">Register a new product &raquo;</a>
+      <a class="btn btn-lg btn-primary" href="/register" role="button">Register a new product &raquo;</a>
     </p>
 </div>
