Build a basic boilerplate for Angular JS 1.x

--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,7 +1,3 @@
-<div class="container">
-  <!-- Main component for a primary marketing message or call to action -->
-  <div navbar-home></div>
-  <div alert-home></div>
-  <div new-register></div>
-
-</div> <!-- /container -->
+<div>
+	<h1>Basic boilerplate for small soluctions</h1>
+</div>
